# Competitors-analysis-

./: .gitignore  Comp Analysis.xlsx  Competitors Analysis - Incredible Gaming.xlsx  Competitors Analysis Blank Template.xlsx  README.md  library_options.md  links.txt  pyproject.toml
.github/workflows/: release.yml
config/: app_settings.json  local_llm.json  parser_rules.json
scraper_outputs/: app_backend_e2e_cat_367564.xlsx  app_backend_e2e_cat_367564_summary.json  category_scrape.json  category_scrape.md  combined_competitor_analysis_summary.json  feature_alignment_sample.json  filled_beautifulsoup.xlsx  filled_lxml.xlsx  filled_playwright.xlsx  filled_scrapy_selector.xlsx  filled_selectolax.xlsx  local_llm_environment.json  scraper_comparison_results.json  scraper_comparison_summary.md
scraper_outputs/cat_367561_config/: category_scrape.json  category_scrape.md
scraper_outputs/review_link_2/: category_scrape.json  category_scrape.md
scripts/: app_backend_e2e.py  build_blank_template.py  build_competitor_analysis.py  build_exe.ps1  check_local_llm.py  feature_alignment_llm.py  run_desktop_app.ps1  scrape_category.py  scraper_comparison.py  scraper_tools.py  test_feature_alignment.py
storm_app/: __init__.py  llm_manager.py  main.py  paths.py  update_manager.py  workflow.py
